--- a/client/styles/Home.module.css
+++ b/client/styles/Home.module.css
@@ -120,3 +120,10 @@
     flex-direction: column;
   }
 }
+
+.slanted {
+  background-color: #3b3c43;
+  height: 500px;
+  -webkit-clip-path: polygon(0 0, 100% 0, 100% 0%, 0 100%);
+  clip-path: polygon(0 0, 100% 0, 100% 66%, 0 100%); 
+}
