--- a/client/styles/slant.css
+++ b/client/styles/slant.css
@@ -1,6 +1,6 @@
 .slanted {
     background-color: #753FF6;
-    height: 900px;
-    -webkit-clip-path: polygon(0 0, 100% 0, 100% 0%, 0 100%);
+    height: 850px;
+    -webkit-clip-path: polygon(8% 0, 100% 0, 100% 100%, 0% 100%);
     clip-path: polygon(8% 0, 100% 0, 100% 100%, 0% 100%);
 }
