--- a/src/web/styles/slant.css
+++ b/src/web/styles/slant.css
@@ -1,6 +1,6 @@
 .slanted {
-    background-color: #753FF6;
+    background-color: #753ff6;
     height:  800px;
-    -webkit-clip-path:  polygon(8% 0, 100% 0, 100% 100%, 0% 100%);
-    clip-path:  polygon(8% 0, 100% 0, 100% 100%, 0% 100%);
-}
+    -webkit-clip-path: polygon(8% 0, 100% 0, 100% 100%, 0% 100%);
+    clip-path: polygon(8% 0, 100% 0, 100% 100%, 0% 100%);
+};
